# guitar-chords-egui-v1

./: Cargo.toml
src/: audio.rs  chords.rs  guitar.rs  lib.rs  main.rs  notes.rs
